                file handling, transactional file operations, also implemented File trashing (not viewing the trash).
2014-03-31  22  Worked on the Add/Edit dialog more and almost implemented the DefFile.
2014-04-01  21  Worked more on file handling and file transactions.
2014-04-03  26  Worked on default file selection and editdialog's attached files context menu preparation.
2014-04-08  19  Default file selection completed, Rename and Remove in BMEditDlg implemented, bugfixes,
                added adding date property for bookmarks.
2014-04-10  18  Implemented FileViewManager as a new manager, bugfixes.
2014-04-11  13  Implemented MainWindow selection saving, bugfixing.
2014-04-15  13  Small improvement for file selection in Add/Edit dialog.
2014-08-23  15  Implemented the "All Tags" checkbox UI only.
2014-08-24  17  Initial implementation of filtering Bookmarks by Tags.
2014-08-25  19  Implemented RA_SaveCheckState and passing associated TIDs from TagManager::
                SetBookmarkTags to MainWindow to check them.
2014-08-26  22  Tag filtering done and working without bugs, RA_NoRefreshView implemented,
                status labels working for tags now (but not for search filters, yet).
2014-09-03  15  Removed Toolbar context menu, fixed tagging bug and tag selection saving.
2014-09-04  13  Added Edit action and made Preview/Open/Edit/With actions ready to implement.
2014-09-07  13  Added BookmarkViewDialog (as default double-click action), FiveStarRatingWidget.
2014-09-08  19  Fixed BMViewDlg bugs, initial implementation of FileViewHandler's/FileViewerWidget
                to preview an HTML file.
2014-09-10  19  Created simple Image and Text preview handlers, BMViewDlg files context menu.
2014-09-11  19  Preview enhancements. Support sandboxed file opening everywhere.
2014-09-13  18  Decision on ExecuteShellEx opening (we don't do it), delete sandbox on start-up