@@ -517,7 +517,7 @@ void BookmarkEditDialog::af_edit()
 void BookmarkEditDialog::af_openWith()
 {
     int filesListIdx = ui->twAttachedFiles->selectedItems()[0]->data(Qt::UserRole).toInt();
-    dbm->fview.OpenWith(GetAttachedFileFullPathName(filesListIdx), &dbm->files);
+    dbm->fview.OpenWith(GetAttachedFileFullPathName(filesListIdx), dbm);
 }
 
 void BookmarkEditDialog::af_setAsDefault()
