@@ -26,3 +26,4 @@
 2014-09-10  19  Created simple Image and Text preview handlers, BMViewDlg files context menu.
 2014-09-11  19  Preview enhancements. Support sandboxed file opening everywhere.
 2014-09-13  18  Decision on ExecuteShellEx opening (we don't do it), delete sandbox on start-up
+2014-09-15  22  Fixed both htm and mht file vieweing, HTMLViewer has frame, Initial OpenWithDialog
